@@ -1,5 +1,8 @@
 2018-03-23  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/85015
+	* g++.dg/cpp0x/pr85015.C: New test.
+
 	PR c++/84942
 	* g++.dg/cpp1y/pr84942.C: New test.
 
