@@ -1,5 +1,9 @@
 2018-03-23  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/85015
+	* decl.c (compute_array_index_type): Set osize to mark_rvalue_use
+	result.
+
 	PR c++/84942
 	* pt.c (tsubst_copy_and_build) <case FIX_TRUNC_EXPR>: Replace
 	cp_build_unary_op call with gcc_unreachable ().
